[package]
name = "rusty_fortress_console"
version = "0.1.0"
authors = ["Noel Garcia Guimeras <garcia.guimeras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_fortress_lib = { path = "../rusty_fortress_lib" }
